Adds graphical movement logic to snake in moveSnake method.